--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -83,9 +83,9 @@ you're free to take whatever you need from my site, but please refrain from taki
 			<a class="p" href="/art">art &amp; crafts</a>
 
 			<h3>media</h3>
-			<a class="m" href="/music">music</a>
+			<a class="m" href="/music">music <img src="!g/pix/updated1.gif" alt="page updated"></a>
 			<a class="m" href="/vgs">video games <img src="!g/pix/updated1.gif" alt="page updated"></a>
-			<a class="m" href="/tv">tv <img src="!g/pix/updated1.gif" alt="page updated"></a>
+			<a class="m" href="/tv">tv</a>
 			<a class="m" href="/reading">reading</a>
 
 			<h3>misc</h3>
