added a bluray section to tv log

--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -17,8 +17,8 @@
 <body>
 	<header>
 		<h1>tv log</h1>
-		<p>place for me to ramble on about stuff i've watched, films and shows alike.</p>
-		<nav><a href="#letterboxd-rss">recently watched</a> - <a href="#lists">shows & anime</a></nav>
+		<p>place for me to ramble on about stuff i've watched, and other things along side that.</p>
+		<nav><a href="#blu-ray">blu-rays</a> - <a href="#letterboxd-rss">recently watched</a> - <a href="#lists">shows & anime</a></nav>
 	</header>
 	<main>
 		<div id="wrapper">
@@ -130,6 +130,23 @@
 			<!--wrapper end div-->
 		</div>
 
+		<aside id="blu-ray">
+			<img title="from the rebellion bluray box art, there's so many neat designs there!" class="pagedoll" src="assets/rebellion-pagedoll.png">
+			<h2>blu-rays</h2>
+			<p>as always, i try to get my favorite stuff physically. here's some blu-rays i own :p</p>
+			<div class="wrapper">
+				<img title="puella magi madoka magica the movie" src="blu-rays/pmmm-the-movie.jpg" alt="pmm the movie">
+				<img title="PMMM rebellion" src="blu-rays/rebellion.jpg" alt="rebellion">
+				<img title="PMMM anime (episodes 1 - 8)" src="blu-rays/pmmm-anime-1-8.jpg" alt="">
+				<img title="wall-e" src="blu-rays/wall-e.jpg">
+				<img title="kaiba" src="blu-rays/kaiba.jpg">
+				<img title="the little prince" src="blu-rays/the-little-prince.jpg">
+				<img title="train to busan" src="blu-rays/train-to-busan.jpg">
+				<img title="everything everywhere all at once" src="blu-rays/eeaao.jpg">
+				<img title="surf's up" src="blu-rays/surfs-up.jpg">
+			</div>
+		</aside>
+
 		<aside>
 			<div id="letterboxd-rss">
 				<h2>lastest watched on <a href="https://letterboxd.com/doqmeat/" target="_blank" class="outlink">letterboxd</a></h2>
@@ -188,7 +205,7 @@
 	</main>
 
 	<footer>
-		<p><b>last updated: 22.jun.25</b></p>
+		<p><b>last updated: 04.jul.25</b></p>
 		<p> <a href="#">top</a> - <a href="/">home</a> - <a href="/sitemap">sitemap</a></p>
 		<p><b>credit:</b> <a href="/notebook/links/fonts.html">fonts</a> used: basiic, pink tape / body bg from madoka magica: rebellion</p>
 	</footer>
