changes to music files

--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -42,17 +42,18 @@
       <a href="cds/index.html">CD collection</a>
 
       <h4>mini-pages</h4>
-      <a href="info.html" target="mainframe">info</a>
+      <a href="mini-pages/info.html" target="mainframe">info</a>
       <a href="listening-log/index.html" target="mainframe">listening logs</a>
-      <a href="featured.html" target="mainframe">featured music</a>
-      <a href="playlists.html" target="mainframe">playlists</a>
+      <a href="mini-pages/featured.html" target="mainframe">featured music</a>
+      <a href="mini-pages/playlists.html" target="mainframe">playlists</a>
       <a href="concerts/index.html" target="mainframe">concerts</a>
-      <a href="kpop-producers.html" target="mainframe">fav kpop producers</a>
+      <a href="mini-pages/kpop-producers.html" target="mainframe">fav kpop producers</a>
       <a href="recaps/index.html" target="mainframe">yearly recaps</a>
-      <a href="links.html" target="mainframe">related links</a>
+      <a href="mini-pages/links.html" target="mainframe">related links</a>
 
       <h4>other</h4>
-      <a title="blog post" href="/blog/2023/230912-vocaloid.html" target="_blank">my history with vocaloid</a>
+      <a href="mini-pages/depression-cherry-booklet.html" target="mainframe">depression cherry booklet</a>
+      <a title="blog post" href="/blog/2023/vocaloid/index.html" target="_blank">my history with vocaloid</a>
 
       <h4>profiles</h4>
       <a href="https://rateyourmusic.com/~doqmeat" target="_blank" class="outlink">rate your music</a>
@@ -60,7 +61,7 @@
     </nav>
 
     <main id="frame" class="box">
-      <iframe id="mainframe" src="info.html" height="100%" width="100%" name="mainframe"></iframe>
+      <iframe id="mainframe" src="mini-pages/info.html" height="100%" width="100%" name="mainframe"></iframe>
     </main>
 
     <div id="mv" class="box"><noscript>this box is for music video "ads" but do not fear! it's just screenshots of my favorite music videos :)</noscript></div>
@@ -133,7 +134,7 @@
     <footer id="foot" class="box">
       <img src="/collection/internet-graphics/!g/matry.gif" alt="matryoshka gumi" style="margin:15px 5px" align="left">
       <img src="/collection/internet-graphics/!g/orka.gif" alt="matryoshka miku" style="margin:15px 5px" align="right">
-      last updated on 02.jul.25
+      last updated on 04.jul.25
       <br>
       <b>credit:</b>
       bg is a scan from <a title="archive.org img link" href="https://archive.org/details/yume-no-manimani-scans/13-page.png" target="_blank">siinamota's yume no manimani</a> album booklet, art by <a title="meisa's website" href="http://hathune39.web.fc2.com/" target="_blank">meisa</a>
