--- a/doqmeat/music/recaps/index.html
+++ b/doqmeat/music/recaps/index.html
@@ -6,10 +6,10 @@
 	<meta charset="UTF-8">
 
 	<title>yearly recaps</title>
-	<link rel="icon" type="image/x-icon" href="/music/favicon.gif">
+	<link rel="icon" type="image/x-icon" href="../favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
-	<link href="/music/body.css" rel="stylesheet" type="text/css" media="all">
-	<link href="/music/frame.css" rel="stylesheet" type="text/css" media="all">
+	<link href="../body.css" rel="stylesheet" type="text/css" media="all">
+	<link href="../mini-pages/frame.css" rel="stylesheet" type="text/css" media="all">
 
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
