--- a/doqmeat/music/concerts/index.html
+++ b/doqmeat/music/concerts/index.html
@@ -2,74 +2,74 @@
 <html lang="en">
 
 <head>
- <!-- coded with love by des :3 meow -->
- <meta charset="UTF-8">
- <title>concerts</title>
- <link rel="icon" type="image/x-icon" href="../favicon.gif">
- <link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
- <link href="../body.css" rel="stylesheet" type="text/css" media="all">
- <link href="../frame.css" rel="stylesheet" type="text/css" media="all">
- <!-- tooltip shit -->
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
- <script src="/!f/tooltip-jquary.js"></script>
- <script src="/!f/tooltip.js"></script>
- <!--  end of tooltip shit -->
+  <!-- coded with love by des :3 meow -->
+  <meta charset="UTF-8">
+  <title>concerts</title>
+  <link rel="icon" type="image/x-icon" href="../favicon.gif">
+  <link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
+  <link href="../body.css" rel="stylesheet" type="text/css" media="all">
+  <link href="../mini-pages/frame.css" rel="stylesheet" type="text/css" media="all">
+  <!-- tooltip shit -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+  <script src="/!f/tooltip-jquary.js"></script>
+  <script src="/!f/tooltip.js"></script>
+  <!--  end of tooltip shit -->
 </head>
 
 <body>
- <main id="frame">
-  <h2>concerts</h2>
-  <p>here's ones that i've been to!</p>
-  <h3 id="billlie-1">24.nov.24 - billlie</h3>
-  <figure>
-   <img src="241124-billlie/banner.jpg" alt="fanmade billlie banner for the concert" width="100%">
-   <figcaption>fanmade banner for the concert!</figcaption>
-  </figure>
-  <h4>favorite performances</h4>
-  <ul>
-   <li>BTTB (back to the basics)</li>
-   <li>flipp!ng a coin</li>
-   <li>gingamingayo</li>
-   <li>ring x ring</li>
-  </ul>
-  <h4>media</h4>
-  <h5>images</h5>
-  <img src="241124-billlie/pic (4).jpg" width="100%" alt="concert group pic of kpop group billlie!">
-  <img src="241124-billlie/pic (2).jpg" width="100%" alt="concert group pic of kpop group billlie!">
-  <img src="241124-billlie/pic (3).jpg" width="100%" alt="concert group pic of kpop group billlie!">
-  <img src="241124-billlie/pic (5).jpg" width="100%" alt="concert group pic of kpop group billlie!">
-  <h5>videos</h5>
-  <figure>
-   <video width="60%" controls>
-    <source src="https://files.catbox.moe/3w0frv.mp4" type="video/mp4">
-   </video>
-   <figcaption><i>GingaMingaYo</i> recorded with my 3DS. <a title="youtube" href="https://youtu.be/cYFgxbl2Ivk" target="_blank">full clip</a></figcaption>
-  </figure>
-  <center>
-   <iframe width="100%" height="315" src="https://www.youtube.com/embed/J_eh5vN3esU?si=UquSQY7FcfWTeSet" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-   <iframe width="100%" height="315" src="https://www.youtube.com/embed/3vXBRlm80iU?si=5ssewrOlTVQlXf8I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-  </center>
-  <hr>
-  <h3 id="oneus-1">07.feb.23 - oneus</h3>
-  <h4>favorite performances</h4>
-  <ul>
-   <li>bring it on</li>
-   <li>luna</li>
-   <li>no diggity</li>
-  </ul>
-  <hr>
-  <h3>dream concerts</h3>
-  <ul>
-   <li>hatsune miku</li>
-   <li>beach house</li>
-   <li>to see any of my loona girlies</li>
-  </ul>
- </main>
- <footer>
-  <b>last updated on: 27.nov.24</b>
-  <br>
-  <a href="#">top</a> <span class="emoji2"></span> <a href="/music">music</a> <span class="emoji2"></span> <a href="/">home</a> <span class="emoji2"></span> <a href="/sitemap.html">sitemap</a>
- </footer>
+  <main id="frame">
+    <h2>concerts</h2>
+    <p>here's ones that i've been to!</p>
+    <h3 id="billlie-1">24.nov.24 - billlie</h3>
+    <figure>
+      <img src="241124-billlie/banner.jpg" alt="fanmade billlie banner for the concert" width="100%">
+      <figcaption>fanmade banner for the concert!</figcaption>
+    </figure>
+    <h4>favorite performances</h4>
+    <ul>
+      <li>BTTB (back to the basics)</li>
+      <li>flipp!ng a coin</li>
+      <li>gingamingayo</li>
+      <li>ring x ring</li>
+    </ul>
+    <h4>media</h4>
+    <h5>images</h5>
+    <img src="241124-billlie/pic (4).jpg" width="100%" alt="concert group pic of kpop group billlie!">
+    <img src="241124-billlie/pic (2).jpg" width="100%" alt="concert group pic of kpop group billlie!">
+    <img src="241124-billlie/pic (3).jpg" width="100%" alt="concert group pic of kpop group billlie!">
+    <img src="241124-billlie/pic (5).jpg" width="100%" alt="concert group pic of kpop group billlie!">
+    <h5>videos</h5>
+    <figure>
+      <video width="60%" controls>
+        <source src="https://files.catbox.moe/3w0frv.mp4" type="video/mp4">
+      </video>
+      <figcaption><i>GingaMingaYo</i> recorded with my 3DS. <a title="youtube" href="https://youtu.be/cYFgxbl2Ivk" target="_blank">full clip</a></figcaption>
+    </figure>
+    <center>
+      <iframe width="100%" height="315" src="https://www.youtube.com/embed/J_eh5vN3esU?si=UquSQY7FcfWTeSet" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe width="100%" height="315" src="https://www.youtube.com/embed/3vXBRlm80iU?si=5ssewrOlTVQlXf8I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </center>
+    <hr>
+    <h3 id="oneus-1">07.feb.23 - oneus</h3>
+    <h4>favorite performances</h4>
+    <ul>
+      <li>bring it on</li>
+      <li>luna</li>
+      <li>no diggity</li>
+    </ul>
+    <hr>
+    <h3>dream concerts</h3>
+    <ul>
+      <li>hatsune miku</li>
+      <li>beach house</li>
+      <li>to see any of my loona girlies</li>
+    </ul>
+  </main>
+  <footer>
+    <b>last updated on: 27.nov.24</b>
+    <br>
+    <a href="#">top</a> <span class="emoji2"></span> <a href="/music">music</a> <span class="emoji2"></span> <a href="/">home</a> <span class="emoji2"></span> <a href="/sitemap.html">sitemap</a>
+  </footer>
 </body>
 
 </html>
