--- a/doqmeat/music/listening-log/index.html
+++ b/doqmeat/music/listening-log/index.html
@@ -5,10 +5,10 @@
 	<!-- coded with love by des :3 meow -->
 	<meta charset="UTF-8">
 	<title>listening logs</title>
-	<link rel="icon" type="image/x-icon" href="/music/favicon.gif">
+	<link rel="icon" type="image/x-icon" href="../favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
-	<link href="/music/body.css" rel="stylesheet" type="text/css" media="all">
-	<link href="/music/frame.css" rel="stylesheet" type="text/css" media="all">
+	<link href="../body.css" rel="stylesheet" type="text/css" media="all">
+	<link href="../mini-pages/frame.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
