minor changes to mini pages in music

--- a/doqmeat/music/mini-pages/depression-cherry-booklet.html
+++ b/doqmeat/music/mini-pages/depression-cherry-booklet.html
@@ -5,7 +5,7 @@
   <!-- coded with love by des :3 meow -->
   <meta charset="UTF-8">
 
-  <title>info</title>
+  <title>depression cherry custom booklet</title>
   <link rel="icon" type="image/x-icon" href="../favicon.gif">
 
   <link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
