--- a/doqmeat/music/mini-pages/info.html
+++ b/doqmeat/music/mini-pages/info.html
@@ -48,11 +48,9 @@
 
 		<h3>important dates</h3>
 
-		<li>2019 - got into into kpop with loona as my introduction.</li>
-		<li>2022 - got into vocaloid because of siinamota's music.</li>
-		<li>16.feb.22 - met yukika on a fancall! </li>
+		<li>16.feb.22 - <a title="img" href="../!g/yukika-fancall.jpg" target="_blank">met yukika on a fancall!</a></li>
 		<li>7.feb.23 - went to my first concert ever! it was a kpop boy group: ONEUS</li>
-		<li>21.mar.24 - went to my first orchestra! it was lovely <img src="/!g/pix/hearts-f.gif"></li>
+		<li>21.mar.24 - went to my first orchestra ever! it was lovely <img src="/!g/pix/hearts-f.gif"></li>
 
 
 		<h3>credit</h3>
