new journal log

--- a/doqmeat/journal/archive.html
+++ b/doqmeat/journal/archive.html
@@ -72,6 +72,7 @@ coded with love by des
     </center>
     <h3>logs</h3>
     <ul>
+      <li class="life interests coding">06.jul.25 - <a href="2025/07.html#6">my 5th sickening of the year</a></li>
       <li class="gaming">18.jun.25 - <a href="2025/06.html#18">PS5 thoughts: 1 month in</a></li>
       <li class="tech interests">01.jun.25 - <a href="2025/06.html#1">my beautiful madoka discs</a></li>
       <li class="life uni">26.may.25 - <a href="2025/05.html#26">recap of uni semester + summer plans</a></li>
