--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -68,8 +68,9 @@
 
     <div id="updates" class="box">
       <h3>updates</h3>
+      <p><b>06.jul.25</b> - added <i>PMMM the movie OST</i> to <a href="cds/index.html">cd collection</a> + added a spinning cd to every album on hover!</p>
       <p><b>02.jul.25</b> - new featured music :3 + added <i>11100011</i> to <a href="fav-albums/index.html">fav-albums</a> and to <a href="cds/index.html">cd collection</a></p>
-      <p><b>29.may.25</b> - added <i>PMMM: rebellion</i> to <a href="cds/index.html">cd collection</a></p>
+      <p><b>29.may.25</b> - added <i>PMMM: rebellion OST</i> to <a href="cds/index.html">cd collection</a></p>
       <p><b>23.may.25</b> - new featured and album once again!</p>
       <p><b>28.feb.25</b> - new featured song &amp; album :-)</p>
       <p><b>08.feb.25</b> - new listening log: <a href="listening-log/2025/index.html#1" target="mainframe">DeBÍ TiRAR MáS FOToS</a></p>
