added spinning CDs to CD collection

--- a/doqmeat/music/cds/index.html
+++ b/doqmeat/music/cds/index.html
@@ -17,6 +17,8 @@
 	<!--  end of tooltip shit -->
 </head>
 
+<!-- missing declan and fever p2 cd but thats for another day -->
+
 <body>
 
 	<header>
@@ -28,9 +30,7 @@
 		<!-- 	header end div -->
 	</header>
 
-	<div id="container">
-
-		<!-- template
+	<!-- template
 
 					<div class="cd"><img src="" alt="cover for ???">
 				<div class="hov">
@@ -43,8 +43,13 @@
 				</div>
 			</div>
 		 -->
-		<!-- madoka movie cd -->
-		<!-- <div class="cd disk"><img src="pics/rebellion-cd.jpg" alt="cd for puella magi madoka magica the movie : part 1 & 2 OST">
+
+	<div id="container">
+
+
+		<div class="cd disk">
+			<img src="/tv/blu-rays/pmmm-the-movie.jpg" alt="cover for PMMM the movie" class="cover">
+			<img class="disk-spin" src="pics/pmmm-the-movie.png" alt="cd for puella magi madoka magica the movie : part 1 & 2 OST">
 			<div class="hov">
 				<div class="caption">
 					<h3>puella magi madoka magica the movie OST</h3>
@@ -53,23 +58,26 @@
 					<p><span class="date"> 03.jul.25</span></p>
 				</div>
 			</div>
-		</div> -->
+		</div>
 
 
-		<div class="cd"><img src="../fav-albums/pics/11100011.jpg" alt="cover for 11100011 by asian glow">
+		<div class="cd">
+			<img class="disk-spin" src="pics/11100011-cd.png">
+			<img class="cover" src="pics/11100011.jpg" alt="cover for 11100011 by asian glow">
 			<div class="hov">
 				<div class="caption">
 					<h3>11100011 - asian glow</h3>
 					<p><span class="fav"></span></p>
 					<p>this album was love at first listen. i love it so very very much.</p>
 					<p>the CD version has 3 demo tracks and oh my GOD is the demo track for <i>camel8strike</i> so fucking gorgeous with its violin jesus.......</p>
-					<p><span class="placeholder"></span></p>
 					<p><span class="date"> 21.jun.25</span></p>
 				</div>
 			</div>
 		</div>
 
-		<div class="cd"><img src="pics/yeule-serotonin-cover.jpg" alt="cover for serotonin II by yeule">
+		<div class="cd">
+			<img src="pics/yeule-serotonin-cd.png" alt="serotonin II cd" class="disk-spin">
+			<img class="cover" src="pics/yeule-serotonin-cover.jpg" alt="cover for serotonin II by yeule">
 			<div class="hov">
 				<div class="caption">
 					<h3>serotonin II - yeule</h3>
@@ -83,7 +91,9 @@
 			</div>
 		</div>
 
-		<div class="cd"><img src="pics/trpp-trpp.jpg">
+		<div class="cd">
+			<img class="disk-spin" src="pics/trpp-cd.png">
+			<img class="cover" src="pics/trpp-trpp.jpg" alt="jewel case cover for TRPP">
 			<div class="hov">
 				<div class="caption">
 					<h3>TRPP - TRPP</h3>
@@ -98,7 +108,9 @@
 			</div>
 		</div>
 
-		<div class="cd"><img src="pics/oohyo-silence.jpg">
+		<div class="cd">
+			<img src="pics/oohyo-silence.png" alt="" class="disk-spin">
+			<img class="cover" src="pics/oohyo-silence.jpg">
 			<div class="hov">
 				<div class="caption">
 					<h3>silence - oohyo</h3>
@@ -108,7 +120,7 @@
 			</div>
 		</div>
 
-		<div class="cd"><img src="pics/declanmckenna-wdytatc.jpg">
+		<div class="cd"><img class="cover" src="pics/declanmckenna-wdytatc.jpg">
 			<div class="hov">
 				<div class="caption">
 					<h3>what do you think about the car? - declan mckenna</h3>
@@ -117,7 +129,9 @@
 			</div>
 		</div>
 
-		<div class="cd"><img src="pics/oohyo-madding.jpg">
+		<div class="cd">
+			<img src="pics/oohyo-city-cd.png" alt="far from the madding city cd" class="disk-spin">
+			<img class="cover" src="pics/oohyo-madding.jpg">
 			<div class="hov">
 				<div class="caption">
 					<h3>성난 도시로부터 멀리 (far from the madding city) - oohyo</h3>
@@ -128,18 +142,22 @@
 			</div>
 		</div>
 
-		<div class="cd"><img src="pics/beachhouse-cherry.jpg">
+		<div class="cd">
+			<img src="pics/beach-house-depression-cherry-cd.png" alt="depression cherry cd" class="disk-spin">
+			<img class="cover" src="pics/beachhouse-cherry.jpg">
 			<div class="hov">
 				<div class="caption">
 					<h3>depression cherry - beach house</h3>
 					<p><span class="fav"></span></p>
-					<p>this album includes a lyric-less booklet so i made a custom one which you can view <a href="/art/post/depression-cherry-booklet" target="_blank">here!</a></p>
+					<p>this album includes a lyric-less booklet so i made a custom one which you can view <a href="../mini-pages/depression-cherry-booklet.html" target="_blank">here!</a></p>
 					<p><span class="date"> 21.dec.20</span> </p>
 				</div>
 			</div>
 		</div>
 
-		<div class="cd"><img src="pics/yukika-soullady.jpg">
+		<div class="cd">
+			<img src="pics/yukika-soul-lady-cd.png" alt="soul lady cd" class="disk-spin">
+			<img class="cover" src="pics/yukika-soullady.jpg">
 			<div class="hov">
 				<div class="caption">
 					<h3>서울여자 (soul lady) - yukika </h3>
@@ -148,13 +166,18 @@
 					<a class="i" href="pics/yukika-soullady-tracks.jpg" target="_blank"><img src="pics/yukika-soullady-tracks.jpg"></a>
 					<a class="i" href="pics/yukika-soullady-pitapet2.jpg" target="_blank"><img src="pics/yukika-soullady-pitapet2.jpg"></a>
 					<a class="i" href="pics/yukika-soullady-bunnylamp.jpg" target="_blank"><img src="pics/yukika-soullady-bunnylamp.jpg"></a>
-					<a class="i" href="pics/yukika-soullady-passport.jpg" target="_blank"><img src="pics/yukika-soullady-passport.jpg"></a>
+					<figure>
+						<a class="i" href="pics/yukika-soullady-passport.jpg" target="_blank"><img src="pics/yukika-soullady-passport.jpg"></a>
+						<figcaption>i made an <a href="https://doqmeat.github.io/HTML-templates/yukika/" target="_blank" class="outlink">html template</a> based on this super cute passport inclusion!</figcaption>
+					</figure>
 					<p><span class="date"></span> 19.nov.20</p>
 				</div>
 			</div>
 		</div>
 
-		<div class="cd"><img src="pics/loona-1200.jpg">
+		<div class="cd">
+			<img src="pics/12-loona-cd.png" alt="cd for 12:00" class="disk-spin">
+			<img class="cover" src="pics/loona-1200.jpg">
 			<div class="hov">
 				<div class="caption">
 					<h3>12:00 - loona</h3>
@@ -165,7 +188,9 @@
 			</div>
 		</div>
 
-		<div class="cd disk"><img src="pics/rebellion-cd.jpg" alt="CD for rebellion OST">
+		<div class="cd disk">
+			<img src="pics/rebellion-cd.png" alt="CD for rebellion OST" class="disk-spin">
+			<img class="cover" src="/tv/blu-rays/rebellion.jpg" alt="CD for rebellion OST">
 			<div class="hov">
 				<div class="caption">
 					<h3>puella magi madoka magica the movie : rebellion OST</h3>
@@ -175,7 +200,9 @@
 			</div>
 		</div>
 
-		<div class="cd"><img src="pics/setsunapop%20(1).jpg" alt="cover for alterour setsuna pop">
+		<div class="cd">
+			<img src="pics/siinamota-setsuna-cd.png" alt="alterour setsuna pop cd" class="disk-spin">
+			<img class="cover" src="pics/setsunapop%20(1).jpg" alt="cover for alterour setsuna pop">
 			<div class="hov">
 				<div class="caption">
 					<h3>アルターワー・セツナポップ / alterour setsuna pop - siinamota</h3>
@@ -194,12 +221,13 @@
 		</div>
 
 
-		<div class="cd"><img src="https://siinamota.doqmeat.com/scans/!g/ikiru/jewel-case-frontcover.jpg">
+		<div class="cd">
+			<img src="pics/siinamota-ikiru-cd.png" alt="ikiru cd" class="disk-spin">
+			<img class="cover" src="https://siinamota.doqmeat.com/scans/!g/ikiru/jewel-case-frontcover.jpg">
 			<div class="hov">
 				<div class="caption">
 					<h3>生きる (ikiru) - siinamota</h3>
 					<p><span class="fav"></span></p>
-					<a class="i" href="https://siinamota.doqmeat.com/scans/!g/ikiru/cd.jpg" target="_blank"><img src="https://siinamota.doqmeat.com/scans/!g/ikiru/cd.jpg"></a>
 					<a class="i" href="https://siinamota.doqmeat.com/scans/!g/ikiru/p5.jpg" target="_blank"><img src="https://siinamota.doqmeat.com/scans/!g/ikiru/p5.jpg"></a>
 					<p><span class="ver"> regular</span></p>
 					<p><span class="date"> 22.feb.22</span></p>
@@ -207,7 +235,9 @@
 			</div>
 		</div>
 
-		<div class="cd"><img src="pics/siinamota-yumenomanimani.jpg">
+		<div class="cd">
+			<img src="pics/siinamota-yume-no-manimani-cd.png" alt="" class="disk-spin">
+			<img class="cover" src="pics/siinamota-yumenomanimani.jpg">
 			<div class="hov">
 				<div class="caption">
 					<h3>夢のまにまに (yume no manimani) - siinamota</h3>
@@ -220,7 +250,9 @@
 			</div>
 		</div>
 
-		<div class="cd"><img src="pics/beachhouse-teendream.jpg">
+		<div class="cd">
+			<img src="pics/beach-house-teen-dream-cd.png" alt="" class="disk-spin">
+			<img class="cover" src="pics/beachhouse-teendream.jpg">
 			<div class="hov">
 				<div class="caption">
 					<h3>teen dream - beach house</h3>
@@ -232,7 +264,9 @@
 			</div>
 		</div>
 
-		<div class="cd"><img src="pics/yukika-timeabout.jpg">
+		<div class="cd">
+			<img src="pics/yukika-timeabout-cd.png" alt="timeabout, cd" class="disk-spin">
+			<img class="cover" src="pics/yukika-timeabout.jpg">
 			<div class="hov">
 				<div class="caption">
 					<h3>timeabout, - yukika</h3>
@@ -243,7 +277,9 @@
 			</div>
 		</div>
 
-		<div class="cd"><img src="pics/ateez-treasure-ep3.jpg">
+		<div class="cd">
+			<img src="pics/ateez-treasure-ep3-cd.png" alt="treasure ep. 3 one to all cd" class="disk-spin">
+			<img class="cover" src="pics/ateez-treasure-ep3.jpg">
 			<div class="hov">
 				<div class="caption">
 					<h3> treasure ep. 3 one to all - ateez</h3>
@@ -254,7 +290,9 @@
 			</div>
 		</div>
 
-		<div class="cd"><img src="pics/enhypen-border-carnival-book.jpg">
+		<div class="cd">
+			<img src="pics/enhypen-carnival-cd.png" alt="border : carnival" class="disk-spin">
+			<img class="cover" src="pics/enhypen-border-carnival-book.jpg">
 			<div class="hov">
 				<div class="caption">
 					<h3>border : carnival - enhypen</h3>
@@ -270,7 +308,9 @@
 			</div>
 		</div>
 
-		<div class="cd"><img src="pics/kokegane.jpg">
+		<div class="cd">
+			<img src="pics/kokegane-no-uta-cd.png" alt="kokegane no uta cd" class="disk-spin">
+			<img class="cover" src="pics/kokegane.jpg" alt="kokegane no uta album cover">
 			<div class="hov">
 				<div class="caption">
 					<h3>コケガネのうた / kokegane no uta - siinamota</h3>
@@ -286,7 +326,9 @@
 			</div>
 		</div>
 
-		<div class="cd"><img src="pics/drippin-theend.jpg">
+		<div class="cd">
+			<img src="pics/drippin-villain-theend-cd.png" alt="villain : the end cd" class="disk-spin">
+			<img class="cover" src="pics/drippin-theend.jpg">
 			<div class="hov">
 				<div class="caption">
 					<h3>villain : the end - drippin</h3>
@@ -298,7 +340,9 @@
 			</div>
 		</div>
 
-		<div class="cd"><img src="pics/txt-dreamchapter-eternity.jpg">
+		<div class="cd">
+			<img src="pics/txt-dream-chapter-cd.png" alt="the dream chapter : eternity cd" class="disk-spin">
+			<img class="cover" src="pics/txt-dreamchapter-eternity.jpg">
 			<div class="hov">
 				<div class="caption">
 					<h3>the dream chapter : eternity - tomorrow x together</h3>
@@ -310,7 +354,9 @@
 			</div>
 		</div>
 
-		<div class="cd"><img src="pics/lucy-childhood.jpg">
+		<div class="cd">
+			<img src="pics/lucy-childhood-cd.png" alt="" class="disk-spin">
+			<img class="cover" src="pics/lucy-childhood.jpg">
 			<div class="hov">
 				<div class="caption">
 					<h3>childhood - lucy</h3>
@@ -320,7 +366,9 @@
 			</div>
 		</div>
 
-		<div class="cd"><img src="pics/oohyo-adventure.jpg">
+		<div class="cd">
+			<img src="pics/oohyo-adventure-cd.png" alt="adventure cd" class="disk-spin">
+			<img class="cover" src="pics/oohyo-adventure.jpg">
 			<div class="hov">
 				<div class="caption">
 					<h3>adventure - oohyo</h3>
@@ -330,7 +378,9 @@
 			</div>
 		</div>
 
-		<div class="cd"><img src="pics/loona-&.jpg">
+		<div class="cd">
+			<img src="pics/loona-and-cd.png" alt="and cd" class="disk-spin">
+			<img class="cover" src="pics/loona-&.jpg">
 			<div class="hov">
 				<div class="caption">
 					<h3>&amp; - loona</h3>
@@ -341,7 +391,9 @@
 			</div>
 		</div>
 
-		<div class="cd"><img src="pics/ateez-fever-p3.jpg">
+		<div class="cd">
+			<img src="pics/ateez-fever-ep3-cd.png" alt="fever ep3 cd" class="disk-spin">
+			<img class="cover" src="pics/ateez-fever-p3.jpg">
 			<div class="hov">
 				<div class="caption">
 					<h3>zero : fever part 3 - ateez</h3>
@@ -352,7 +404,9 @@
 			</div>
 		</div>
 
-		<div class="cd"><img src="pics/drippin-villain-book.jpg">
+		<div class="cd">
+			<img src="pics/drippin-villain-cd.png" alt="" class="disk-spin">
+			<img class="cover" src="pics/drippin-villain-book.jpg">
 			<div class="hov">
 				<div class="caption">
 					<h3>villain - drippin</h3>
@@ -366,7 +420,9 @@
 		</div>
 
 
-		<div class="cd"><img src="pics/yoasobi-book2.jpg">
+		<div class="cd">
+			<img src="pics/yoasobi-book2-cd.png" alt="cd for the book 2" class="disk-spin">
+			<img class="cover" src="pics/yoasobi-book2.jpg">
 			<div class="hov">
 				<div class="caption">
 					<h3>the book 2 - yoasobi</h3>
@@ -383,7 +439,8 @@
 		</div>
 
 
-		<div class="cd"><img src="pics/enhypen-dimension-dilemma.jpg">
+		<div class="cd">
+			<img class="cover" src="pics/enhypen-dimension-dilemma.jpg">
 			<div class="hov">
 				<div class="caption">
 					<h3>dimension : dilemma - enhypen</h3>
@@ -395,7 +452,9 @@
 		</div>
 
 
-		<div class="cd"><img src="pics/lucy-blue-book.jpg">
+		<div class="cd">
+			<img src="pics/lucy-blue-cd.png" alt="blue cd" class="disk-spin">
+			<img class="cover" src="pics/lucy-blue-book.jpg" alt="blue photobook cover">
 			<div class="hov">
 				<div class="caption">
 					<h3>blue - lucy</h3>
@@ -421,11 +480,14 @@
 			</div>
 		</div>
 
-		<div class="cd"><img src="pics/arcticmonkeys-am.jpg">
+		<div class="cd">
+			<img src="pics/am-cd.png" alt="AM cd" class="disk-spin">
+			<img class="cover" src="pics/arcticmonkeys-am.jpg" alt="am album cover">
 			<div class="hov">
 				<div class="caption">
 					<h3>AM - arctic monkeys</h3>
 					<p><span class="fav"></span></p>
+					<p>a classic what can i even say</p>
 					<p><span class="date"> 31.mar.21</span></p>
 				</div>
 			</div>
@@ -443,7 +505,7 @@
 	<div id="home"><a class="i" title="go back to music page" href="/music"><img src="/!g/deco/cd.gif"></a></div>
 
 	<footer>
-		imgs on this page have been scanned by me unless stated otherwise! <img src="/!g/pix/musicnote1.gif"> <b>last updated on 01.jul.25</b>
+		imgs on this page have been scanned by me unless stated otherwise! <img src="/!g/pix/musicnote1.gif"> <b>last updated on 06.jul.25</b>
 		<br>
 		<b>credit:</b> background is from yukika's soul lady photobook! / <a href="/notebook/links/fonts.html">fonts</a> used: natsuzemi, gaegu, spirit
 		<br>
