added a thingie to the css link so there's no need for a hard refresh

--- a/doqmeat/music/cds/index.html
+++ b/doqmeat/music/cds/index.html
@@ -8,7 +8,7 @@
 	<meta charset="UTF-8">
 	<title>CDs</title>
 	<link rel="icon" type="image/x-icon" href="/!g/pix/cd.gif">
-	<link href="body.css" rel="stylesheet" type="text/css" media="all">
+	<link href="body.css?07" rel="stylesheet" type="text/css" media="all">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
