--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -148,6 +148,7 @@
 		<div class="borderwrap">
 			<div class="wrapper-in">
 				<marquee direction="left" scrollamount="9" behavior="alternate" onmouseover="this.stop();" onmouseout="this.start();">
+					<img src="!g/me-irl/homura-antisocial.jpeg">
 					<img src="/collection/cats/!g/grindneverstarts.jpg">
 					<img src="!g/me-irl/canweget.png" alt="can we get ben & jerry's?">
 					<img src="!g/me-irl/cat-bbq.jpg" alt="cats having a nice bbq">
