--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -78,7 +78,6 @@
 			<a title="nimravidae - cozy site, i love the green tones!" href="https://nimravidae.neocities.org" target="_blank"><img src="!g/nimravidae.gif"></a>
 			<a title="lapin - a major inspiration for me! their site is lovely and filled with so many things!" href="https://loves1ck.neocities.org/" target="_blank"><img src="!g/lovesick.png"></a>
 			<a title="donna - SO CHARMINGG ^-^ i need to follow one of their cooking recipes someday!" href="https://ancientangel333.neocities.org/" target="_blank"><img src="!g/ancientangel333.png"></a>
-			<a title="pom - i cannot even express how much i love this site!!! the webmaster's fursona is so so so cute and the colors of the site are EVERYTHING. i visit this one frequently" href="https://pomelo.lol/" target="_blank"><img src="!g/pomelo.gif"></a>
 			<a title="Becki - sweet personal site with an amazing curation of internet goodies such as pixels!" href="https://sakuradreams.neocities.org" target="_blank"><img src="!g/SakuraDreams.gif"></a>
 			<a title="noah - LOVELYYY and very home-y ? site!!" href="https://scarecrowkid.net/" target="_blank"><img src="!g/scarecrowkid.gif"></a>
 			<a title="rem - love reading this site" href="https://remiku.neocities.org" target="_blank"><img src="!g/remiku.png"></a>
@@ -306,7 +305,6 @@
 			<a title="TONS web materials!" href="http://sozaiya405.chu.jp/" target="_blank"><img src="!g/sozaiya405.gif"></a>
 			<a title="make your own dream room!" href="https://dreamroom.uwu.ai" target="_blank"><img src="!g/dreamroom.gif"></a>
 			<a title="web materials!" href="https://fancyparts.com/index.html" target="_blank"><img src="!g/fancyparts.gif"></a>
-			<a title="pixels" href="https://pomelo.lol/pixel/home" target="_blank"><img src="https://i.ibb.co/0GD8CXT/pombttn.gif"></a>
 			<a title="have a pet on your site" href="https://gifypet.neocities.org" target="_blank"><img src="/sites/!g/gifypet.gif"></a>
 			<a title="make your own blinkie, blinkie archive" href="https://blinkies.cafe" target="_blank"><img src="/sites/!g/blinkiesCafe.gif"></a>
 			<a href="https://scripted.neocities.org" target="_blank"><img src="https://scripted.neocities.org/SCRIPTED-BUTTON.gif" title="lots of cool codes for your site"></a>
@@ -316,7 +314,6 @@
 			<a title="has cute CAT themed FC2 blog templates, materials, and lots more! they also have linked other resource sites!" href="http://tora7.ciao.jp/" target="_blank"><img src="!g/tora7.gif" alt="tora7"></a>
 			<a title="joisu - their pixels are toybox are so cute :3" href="https://twicethepixels.neocities.org/" target="_blank"><img src="https://twicethepixels.neocities.org/site_images/TwiceThePixels-AniBanner-88x31-Hamtaro.gif" alt="twicethepixels"></a>
 			<a title="catstuff" href="https://user.xmission.com/~emailbox/catstuff.htm" target="_blank"><img src="!g/catstuff-xmission.gif"></a>
-			<a href="https://pomelo.lol/pixel/home" target="_blank"><img src="!g/pomelo-pixel.gif" alt="pomelo's pixel site"></a>
 			<a title="F2U icons n pixels" href="http://www.nagai.net/icon-kan/index.html" target="_blank"><img src="!g/nagai-net.gif" alt="nagai"></a>
 			<a title="pixels for adoptions" href="https://mooncandy.toys/" target="_blank"><img src="!g/mooncandy.gif"></a>
 			<a href="https://loveberry.nekoweb.org/" target="_blank"><img src="!g/loveberry.gif" alt="loveberry"></a>
@@ -391,6 +388,7 @@
 			<a href="https://angelscake.neocities.org/" target="_blank"><img src="!g/angelscake.gif" alt="angelscake"></a>
 			<a href="https://sealparty.neocities.org" target="_blank"><img src="!g/sealparty.gif"></a>
 			<a href="https://adilene.net" target="_blank"><img src="!g/adilene.net.png"></a>
+			<a title="pom" href="https://pomelo.lol/" target="_blank"><img src="!g/pomelo.gif"></a>
 		</div>
 
 		<p><a href="https://gougou772.neocities.org/" target="_blank">gougou772</a> /
