--- a/doqmeat/vgs/games/infinity-nikki/index.html
+++ b/doqmeat/vgs/games/infinity-nikki/index.html
@@ -27,6 +27,18 @@
     <nav class="info"><b>navigation: </b><a href="#logs">logs</a> / <a href="#screenshots">screenshots</a> / <a href="#outfits">fav outfits</a></nav>
 
     <h3 id="logs">logs</h3>
+
+    <p><span class="date">08.jul.25</span> the <b>yurism</b> of this season.....</p>
+    <img src="250708-sith.jpg" alt="infinity nikki screenshots" width="100%">
+    <p>i really enjoyed the main questline for 1.7! i still need to finish the main storyline but this was super interesting still. def way up better than 1.6 quest.</p>
+    <details>
+      <summary>open for spoilers! yay!</summary>
+      <figure>
+        <img src="250708-yuri.jpg" alt="infinity nikki screenshots" width="100%">
+        <figcaption>this sequence in the quest kinda had me gagged</figcaption>
+      </figure>
+    </details>
+    <hr>
     <p><span class="date">24.jun.25</span> my outfit of the day :3</p>
     <img src="250624-OOTD.jpg" alt="blue jacket with a pink mini skirt" width="100%">
     <p>also want to celebrate this insane pull i got for the fairy dress bc holy shit??? i never expect to get anything from the gacha system of any game so this was very nice.</p>
@@ -62,6 +74,7 @@
     <img src="panda (4).jpg" width="100%" alt="infinity nikki screenshots">
 
     <h3 id="screenshots">screenshots</h3>
+    <img src="250708-night.jpg" alt="nikki wearing a crop top with grey sleeves" width="100%">
     <figure>
       <img src="250630-blue.jpg" alt="posing with a blue elegant dress">
       <figcaption>got the dress from the <i>butterfly dream</i> resonance! i actually really just want the painter set so i hope i can get that at some point.</figcaption>
@@ -69,6 +82,7 @@
 
     <h3 id="outfits">fav outfits</h3>
     <center>
+      <img title="the mushroom overall OMGGG" src="250708-mushrooms.jpg" alt="infinity nikki screenshots" width="49%">
       <img src="250630-honey.jpg" width="49%" alt="yellow knitted weater with long white socks and brown boots">
       <img src="250630-evil.jpg" width="49%" alt="grey outfit with a hoodie and miniskirt">
       <img src="250630-fits (1).jpg" alt="leather jacket with red accents" width="49%">
